--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -978,14 +978,47 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lvd-KD-hWk">
-                                <rect key="frame" x="0.0" y="617" width="375" height="50"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="0.0" y="622" width="375" height="45"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H4o-p0-GJj">
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="45"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="kk5-Xa-bb3"/>
+                                        </constraints>
+                                        <state key="normal" title="上一题"/>
+                                        <connections>
+                                            <action selector="lastBtnClick:" destination="psZ-67-bwE" eventType="touchUpInside" id="CQe-o6-8hM"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="92m-Up-Ceo">
+                                        <rect key="frame" x="275" y="0.0" width="100" height="45"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="qoD-bl-VM4"/>
+                                        </constraints>
+                                        <state key="normal" title="下一题"/>
+                                        <connections>
+                                            <action selector="nextBtnClick:" destination="psZ-67-bwE" eventType="touchUpInside" id="ujB-hZ-Yi7"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.92218177360366493" green="0.90175128203123212" blue="0.87757860520118303" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="cFP-Ol-1qs"/>
+                                    <constraint firstAttribute="bottom" secondItem="H4o-p0-GJj" secondAttribute="bottom" id="6Yg-wt-ImI"/>
+                                    <constraint firstItem="H4o-p0-GJj" firstAttribute="top" secondItem="Lvd-KD-hWk" secondAttribute="top" id="AaR-nL-I30"/>
+                                    <constraint firstItem="92m-Up-Ceo" firstAttribute="top" secondItem="Lvd-KD-hWk" secondAttribute="top" id="ECL-kc-i7T"/>
+                                    <constraint firstAttribute="bottom" secondItem="92m-Up-Ceo" secondAttribute="bottom" id="FB7-OJ-haY"/>
+                                    <constraint firstAttribute="trailing" secondItem="92m-Up-Ceo" secondAttribute="trailing" id="X2T-zf-a3F"/>
+                                    <constraint firstAttribute="height" constant="45" id="cFP-Ol-1qs"/>
+                                    <constraint firstItem="H4o-p0-GJj" firstAttribute="leading" secondItem="Lvd-KD-hWk" secondAttribute="leading" id="sxA-Yo-CFt"/>
                                 </constraints>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MfY-j0-f7u">
-                                <rect key="frame" x="0.0" y="64" width="375" height="553"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="602"/>
+                                <connections>
+                                    <outlet property="delegate" destination="psZ-67-bwE" id="gYK-ze-eji"/>
+                                </connections>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1008,6 +1041,8 @@
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="lastButton" destination="H4o-p0-GJj" id="eLF-g1-BCk"/>
+                        <outlet property="nextButton" destination="92m-Up-Ceo" id="3uG-nb-58f"/>
                         <outlet property="scrollViewPater" destination="MfY-j0-f7u" id="Gxm-Pj-sFj"/>
                     </connections>
                 </viewController>
@@ -1027,15 +1062,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="248" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FzN-f4-2Iw">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FzN-f4-2Iw">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="celltopic" rowHeight="248" id="J6O-pa-PmV" customClass="PaterTopicTableViewCell">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="248"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="celltopic" rowHeight="100" id="J6O-pa-PmV" customClass="PaterTopicTableViewCell">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="J6O-pa-PmV" id="wmf-sE-trv">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="247"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1、" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nns-8U-eVd">
@@ -1058,8 +1093,8 @@
                                                     <color key="textColor" red="1" green="0.58331439266476992" blue="0.12216659541693731" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="题目" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Nb-4W-wix">
-                                                    <rect key="frame" x="15" y="55" width="340" height="20"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="题目" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Nb-4W-wix">
+                                                    <rect key="frame" x="15" y="50" width="340" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="C63-H5-wm3"/>
                                                     </constraints>
@@ -1068,7 +1103,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ATl-Df-8sb">
-                                                    <rect key="frame" x="10" y="80" width="355" height="1"/>
+                                                    <rect key="frame" x="10" y="78" width="355" height="1"/>
                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="1" id="Lu4-Z8-JK0"/>
@@ -1077,14 +1112,14 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="1Nb-4W-wix" secondAttribute="trailing" constant="20" id="3mX-EA-py0"/>
-                                                <constraint firstItem="ATl-Df-8sb" firstAttribute="top" secondItem="1Nb-4W-wix" secondAttribute="bottom" constant="5" id="4yT-SS-saC"/>
+                                                <constraint firstItem="ATl-Df-8sb" firstAttribute="top" secondItem="1Nb-4W-wix" secondAttribute="bottom" constant="8" id="4yT-SS-saC"/>
                                                 <constraint firstItem="WRa-bm-ZGc" firstAttribute="leading" secondItem="nns-8U-eVd" secondAttribute="trailing" id="DeY-nH-PWb"/>
                                                 <constraint firstItem="nns-8U-eVd" firstAttribute="leading" secondItem="wmf-sE-trv" secondAttribute="leading" constant="15" id="GSI-kJ-ep3"/>
                                                 <constraint firstItem="ATl-Df-8sb" firstAttribute="leading" secondItem="wmf-sE-trv" secondAttribute="leading" constant="10" id="LCs-lL-sU1"/>
                                                 <constraint firstItem="1Nb-4W-wix" firstAttribute="leading" secondItem="wmf-sE-trv" secondAttribute="leading" constant="15" id="NCk-bh-lcH"/>
                                                 <constraint firstAttribute="trailing" secondItem="ATl-Df-8sb" secondAttribute="trailing" constant="10" id="UbL-jB-XRh"/>
                                                 <constraint firstItem="nns-8U-eVd" firstAttribute="top" secondItem="wmf-sE-trv" secondAttribute="top" constant="20" id="UnT-23-Dd7"/>
-                                                <constraint firstItem="1Nb-4W-wix" firstAttribute="top" secondItem="WRa-bm-ZGc" secondAttribute="bottom" constant="15" id="tIc-8U-fcm"/>
+                                                <constraint firstItem="1Nb-4W-wix" firstAttribute="top" secondItem="WRa-bm-ZGc" secondAttribute="bottom" constant="10" id="tIc-8U-fcm"/>
                                                 <constraint firstItem="WRa-bm-ZGc" firstAttribute="bottom" secondItem="nns-8U-eVd" secondAttribute="bottom" id="z5l-OE-Wct"/>
                                             </constraints>
                                         </tableViewCellContentView>
