--- a/TyDtk/Base.lproj/Main.storyboard
+++ b/TyDtk/Base.lproj/Main.storyboard
@@ -958,7 +958,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="myTableView" destination="Fet-0o-UQY" id="cdp-ZK-Kvy"/>
-                        <segue destination="psZ-67-bwE" kind="show" identifier="test" id="rlR-Gj-gBN"/>
+                        <segue destination="psZ-67-bwE" kind="show" identifier="topicStar" id="rlR-Gj-gBN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qwZ-54-FDC" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1112,15 +1112,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FzN-f4-2Iw">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="120" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="FzN-f4-2Iw">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="celltopic" rowHeight="120" id="J6O-pa-PmV" customClass="PaterTopicTableViewCell">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="120"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="celltopic" rowHeight="130" id="J6O-pa-PmV" customClass="PaterTopicTableViewCell">
+                                        <rect key="frame" x="0.0" y="50" width="375" height="130"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="J6O-pa-PmV" id="wmf-sE-trv">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="119"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="129"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1、" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nns-8U-eVd">
@@ -1160,12 +1160,12 @@
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Zl-12-5x6">
-                                                    <rect key="frame" x="20" y="89" width="345" height="20"/>
+                                                    <rect key="frame" x="20" y="95" width="345" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="20" id="Evv-Jr-zwD"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -1178,12 +1178,18 @@
                                                 <constraint firstItem="1Nb-4W-wix" firstAttribute="leading" secondItem="wmf-sE-trv" secondAttribute="leading" constant="15" id="NCk-bh-lcH"/>
                                                 <constraint firstAttribute="trailing" secondItem="ATl-Df-8sb" secondAttribute="trailing" constant="10" id="UbL-jB-XRh"/>
                                                 <constraint firstItem="nns-8U-eVd" firstAttribute="top" secondItem="wmf-sE-trv" secondAttribute="top" constant="20" id="UnT-23-Dd7"/>
+                                                <constraint firstItem="8Zl-12-5x6" firstAttribute="top" secondItem="1Nb-4W-wix" secondAttribute="bottom" constant="25" id="e10-99-X5M"/>
                                                 <constraint firstAttribute="trailing" secondItem="8Zl-12-5x6" secondAttribute="trailing" constant="10" id="rhb-6x-cc3"/>
                                                 <constraint firstItem="1Nb-4W-wix" firstAttribute="top" secondItem="WRa-bm-ZGc" secondAttribute="bottom" constant="10" id="tIc-8U-fcm"/>
                                                 <constraint firstItem="8Zl-12-5x6" firstAttribute="top" secondItem="ATl-Df-8sb" secondAttribute="bottom" constant="10" id="tPJ-X8-u6P"/>
                                                 <constraint firstItem="8Zl-12-5x6" firstAttribute="leading" secondItem="wmf-sE-trv" secondAttribute="leading" constant="20" id="vwy-YI-sGB"/>
                                                 <constraint firstItem="WRa-bm-ZGc" firstAttribute="bottom" secondItem="nns-8U-eVd" secondAttribute="bottom" id="z5l-OE-Wct"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="tPJ-X8-u6P"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="labNumberWidth" destination="53m-ny-YiZ" id="0R1-ZL-Dnr"/>
@@ -1194,6 +1200,22 @@
                                             <outlet property="labTopicTitle" destination="1Nb-4W-wix" id="d8f-Xv-KNe"/>
                                             <outlet property="labTopicType" destination="WRa-bm-ZGc" id="bJ6-lV-SEC"/>
                                         </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell2" id="UfD-nP-K3p">
+                                        <rect key="frame" x="0.0" y="180" width="375" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UfD-nP-K3p" id="lm3-sp-Wnf">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="119"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kYo-Me-NDG">
+                                                    <rect key="frame" x="114" y="28" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
